# Mapcident

./: .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  compose.prod.yml  compose.yml  main.py  pyproject.toml
.github/workflows/: release.yml
apps/categories/: admin.py  models.py  schemas.py  views.py
apps/categories/fixtures/: categories.json
apps/categories/migrations/: 0001_initial.py  0002_categorygroup_alter_category_options_category_order_and_more.py
apps/comments/: admin.py  models.py  schemas.py  views.py
apps/comments/migrations/: 0001_initial.py  0002_initial.py
apps/reports/: admin.py  models.py  schemas.py  views.py
apps/reports/migrations/: 0001_initial.py  0002_initial.py
apps/users/: admin.py  models.py  schemas.py  views.py
apps/users/migrations/: 0001_initial.py
caddy/: Caddyfile  Caddyfile.prod
config/: settings.py  urls.py
frontend/: Dockerfile  Dockerfile.dev  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: HomeClient.tsx  globals.css  layout.tsx  page.tsx
frontend/app/profile/: page.tsx
frontend/components/: Navbar.tsx
frontend/components/comments/: CommentList.tsx
frontend/components/map/: ImageGalleryModal.tsx  ReportMap.tsx
frontend/components/reports/: NewReportModal.tsx  ReportCard.tsx  ReportList.tsx  ReportStatusBadge.tsx
frontend/components/ui/: category-combobox.tsx  form.tsx
frontend/hooks/: useGeolocation.ts
frontend/lib/: auth.ts  button-variants.ts  geo.ts  types.ts
frontend/lib/api/: auth.ts  categories.ts  client.ts  comments.ts  reports.ts
(+3 files in other folders)
